--------------------------------------------------------------------------------------------------
Release notes version 1.9.5_beta : Enhancements, modifications and corrected bugs since version 1.9.4 :
--------------------------------------------------------------------------------------------------
07/10/24 (TRUST) New Keyword  : Added a new correlation for Nusselt heat flux, including Nusselt parser with Reynolds (Re) and Prandtl (Pr) number dependency.
07/10/24 (TRUST) New Feature  : Move correlation structures from Pb_Multiphase to Probleme_base (allow to use CMFD type turbulence or parietal heat transfer correlations with (thermo)hydraulic problems for example). TrioCFD needed for turbulence equations.
07/10/24 (TRUST) Tools        : Patched MEDCoupling to add crackAlong() functionality.
26/09/24 (TRUST) Change       : cmake upgraded from 3.22 to 3.30.
26/09/24 (TRUST) Change       : python upgraded from 3.7 to 3.12.
26/09/24 (TRUST) Change       : mpi4py upgraded from 3.0.3 to 4.0.0.
03/09/24 (TRUST) GPU          : A1000, A2000, H100 GPUs and Cuda 12.x supported. Add ./configure -kokkos_hip option to build on AMD with HIP Kokkos backend (still buggy) so default is still OpenMP-target backend (with performance issue on MI250)
03/09/24 (TRUST) GPU          : VEF convection schemes muscl_new and EF_stab available
03/09/24 (TRUST) GPU          : Complete porting for VEF dicretization of Quasi-compressible module and wall laws for turbulence models. Optimization with a lot H2D&D2H copies suppressed
25/07/24 (TRUST) Bug fix      : Performance regression fixed in IJK (seen in FT application in TrioCFD)
18/07/24 (TRUST) Fix          : Possible to visualize surface fields issued from Champ_post_extraction with VisIt
12/07/24 (TRUST) GPU          : Enable HIP support in PETSc to get Hypre multigrid available on AMD GPU with: petsc_gpu gcp|gmres { precond boomeramg { } ... }