@@ -1,3 +1,4 @@
+XX/XX/24 (TRUST) Minor change : -force_provided_openmpi use 5.0.5 instead of old 2.0.4 OpenMPI version
 -------------------------------------------------------------
 Developer notes version 1.9.5_beta : Changes since version 1.9.4 :
 -------------------------------------------------------------
