@@ -1310,7 +1310,7 @@ then
    then
       if [ "$TRUST_USE_CUDA" = 1 ]
       then
-         export TRUST_FORCE_LATEST_OPENMPI=1 # OpenMPI Cuda-Aware by default on PC
+         export TRUST_FORCE_PROVIDED_OPENMPI=1 # OpenMPI Cuda-Aware by default on PC
       else   
          if [ "`echo $TRUST_VERSION_GNU | awk -F. '{if ($1*100+$2*10+$3>=1100) print -force_latest_mpich}'`" != "" ]
          then
